--- a/playbook.yml
+++ b/playbook.yml
@@ -14,6 +14,9 @@
     # - name: update repositories
     #   yum: name=* state=latest
 
+    - name: install vim
+      yum: name=vim state=present
+
     - name: update git
       yum: name=git state=latest
 
